{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 55,
  "lineage": "b7e1e2da-b6e8-e300-a63b-9fe478f11063",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dee22c13ea7a9a67",
            "arn": "arn:aws:ec2:ap-south-1:476114148640:instance/i-08c5267a4b8b8f781",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c5267a4b8b8f781",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06496088148cf185b",
            "private_dns": "ip-10-0-2-225.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.225",
            "public_ip": "13.233.149.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-024e21bb87e67af62",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01574e506446cfdfe",
            "tags": {
              "Name": "Nginx_Server_1"
            },
            "tags_all": {
              "Name": "Nginx_Server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a18a1e3a95f07a2"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:476114148640:internet-gateway/igw-0f178bef35348a4b1",
            "id": "igw-0f178bef35348a4b1",
            "owner_id": "476114148640",
            "tags": {
              "Name": "my_tf_igw_1"
            },
            "tags_all": {
              "Name": "my_tf_igw_1"
            },
            "vpc_id": "vpc-03919da3176a7babb"
          },
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:476114148640:route-table/rtb-0334244bfbced373c",
            "id": "rtb-0334244bfbced373c",
            "owner_id": "476114148640",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f178bef35348a4b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_tf_rt_1"
            },
            "tags_all": {
              "Name": "my_tf_rt_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03919da3176a7babb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw-1",
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub-rt-ass-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06230ad3cead12318",
            "route_table_id": "rtb-0334244bfbced373c",
            "subnet_id": "subnet-01574e506446cfdfe"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw-1",
            "aws_route_table.my-rt-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:476114148640:security-group/sg-03a18a1e3a95f07a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a18a1e3a95f07a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241014142839127800000001",
            "name_prefix": "terraform-",
            "owner_id": "476114148640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx_sg"
            },
            "tags_all": {
              "Name": "nginx_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03919da3176a7babb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:476114148640:subnet/subnet-038e2f08ffd252b02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038e2f08ffd252b02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114148640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_tf_private_subnet_1"
            },
            "tags_all": {
              "Name": "my_tf_private_subnet_1"
            },
            "vpc_id": "vpc-03919da3176a7babb"
          },
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:476114148640:subnet/subnet-01574e506446cfdfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01574e506446cfdfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "476114148640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_tf_public_subnet_1"
            },
            "tags_all": {
              "Name": "my_tf_public_subnet_1"
            },
            "vpc_id": "vpc-03919da3176a7babb"
          },
          "dependencies": [
            "aws_vpc.my-vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:476114148640:vpc/vpc-03919da3176a7babb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c265c4bba96b00f9",
            "default_route_table_id": "rtb-00eab76ec6f924b33",
            "default_security_group_id": "sg-08dbee1226b87d461",
            "dhcp_options_id": "dopt-05f7174c59e16a86c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03919da3176a7babb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00eab76ec6f924b33",
            "owner_id": "476114148640",
            "tags": {
              "Name": "my_tf_vpc_1"
            },
            "tags_all": {
              "Name": "my_tf_vpc_1"
            }
          }
        }
      ]
    }
  ]
}